# clustering-benchmarks

./: .gitignore  README.md  run_benchmark.sh
data/: rust_k_means_model.json
grpc-benchmark-outputs/: python_1024.json  python_128.json  python_16.json  python_2.json  python_2048.json  python_256.json  python_32.json  python_4.json  python_4096.json  python_512.json  python_64.json  python_8.json  rust_1024.json  rust_128.json  rust_16.json  rust_2.json  rust_2048.json  rust_256.json  rust_32.json  rust_4.json  rust_4096.json  rust_512.json  rust_64.json  rust_8.json  rust_on_python_1024.json  rust_on_python_128.json  rust_on_python_16.json  rust_on_python_2.json  rust_on_python_2048.json  rust_on_python_256.json  rust_on_python_32.json  rust_on_python_4.json  rust_on_python_4096.json  rust_on_python_512.json  rust_on_python_64.json  rust_on_python_8.json
python-grpc/: pyproject.toml
python-grpc/src/: main.py
rust-grpc/: Cargo.toml  README.md
rust-grpc/src/: lib.rs  main.rs  server.rs
training/: benchmark_test.py  pyproject.toml
visualisations/: Visualisations.ipynb
