[tool.poetry]
name = "py_grpc"
version = "0.1.0"
authors = ["LukeMathWalker", "sitegui", "dunnock"]
description = "gRPC microservice to serve K-means predictions."

[tool.poetry.dependencies]
python = "^3.7"
pip= "^19.1"
grpcio-tools = "^1.25"
grpcio = "^1.25"
scikit-learn = "^0.21.3"
numpy = "^1.17"
linfa = "^0.0.1"
